--- a/package.json
+++ b/package.json
@@ -30,10 +30,12 @@
     "cloudinary": "^2.6.1",
     "clsx": "^2.1.1",
     "dotenv": "^16.5.0",
+    "framer-motion": "^12.16.0",
     "geist": "^1.4.2",
     "katex": "^0.16.22",
     "lucide-react": "^0.511.0",
     "mongoose": "^8.15.0",
+    "motion": "^12.16.0",
     "nanoid": "^5.1.5",
     "next": "15.3.2",
     "next-auth": "5.0.0-beta.28",
@@ -49,6 +51,7 @@
     "@babel/preset-env": "^7.27.2",
     "@babel/preset-typescript": "^7.27.1",
     "@eslint/eslintrc": "^3",
+    "@iconify-json/material-symbols": "^1.2.24",
     "@jest/globals": "30.0.0-beta.3",
     "@tailwindcss/postcss": "^4.1.7",
     "@types/jest": "^29.5.14",
